# flutter_pcm_sound

./: pubspec.yaml
android/src/main/java/com/lib/flutter_pcm_sound/: FlutterPcmSoundPlugin.java
example/lib/: main.dart
ios/Classes/: FlutterPcmSoundPlugin.m
lib/: flutter_pcm_sound.dart  flutter_pcm_sound_windows.dart  flutter_pcm_sound_windows_real.dart  flutter_pcm_sound_windows_stub.dart
lib/web/: audio_worklet_processor.js  flutter_pcm_sound_web.dart
linux/: CMakeLists.txt  flutter_pcm_sound_plugin.bkp  flutter_pcm_sound_plugin.cc  flutter_pcm_sound_plugin_private.h
linux/include/flutter_pcm_sound/: flutter_pcm_sound_plugin.h
linux/test/: flutter_pcm_sound_plugin_test.cc
windows/: CMakeLists.txt  flutter_pcm_sound_plugin.cpp  flutter_pcm_sound_plugin.h
